--- a/header.html
+++ b/header.html
@@ -10,7 +10,28 @@
 
 <body>
     <header>
+        <h1>Tricks and Tips</h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="btn-group btn-group-lg" role="group">
 
+                        <button class="btn btn-secondary" type="button">
+                                TOUT
+                            </button>
+                        <button class="btn btn-secondary" type="button">
+                                HTML
+                            </button>
+                        <button class="btn btn-secondary" type="button">
+                                Bootstrap
+                            </button>
+                        <button class="btn btn-secondary" type="button">
+                                Javascript
+                            </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </header>
 
