Création du footer

--- a/footer.html
+++ b/footer.html
@@ -9,9 +9,15 @@
 </head>
 
 <body>
-    <footer>
-
-
+    <footer class="page-footer">
+        <div class="row-0">
+            <div class="col-0-0">
+                <span class="tr_an_ti">Tricks and Tips</span> est un projet créé dans le cadre de
+                <a href="https://www.becode.org/" class="becode" alt="BeCode"><img src="https://cdn.uc.assets.prezly.com/0ce2e96c-4de7-4f10-ac0a-47e10150f06d/-/resize/1108x/-/quality/best/-/format/auto/" /></a> .
+                <p class="creators_conteneur">Créateurs: <a class="creators" href="https://github.com/DzenetanMassart">Massart D.</a></p>
+            </div>
+            <div class="col-0-1"><span>Massart.D ,2019</span></div>
+        </div>
     </footer>
 
 
