Bon, la partie JS n'est pas finit mais le site est en responsive!

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <body>
     <header>
         <h1>Tricks and Tips</h1>
-        <div class="container-fluid">
+        <div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="btn-group btn-group-lg" role="group">
 
-                        <button class="btn btn-secondary" type="button">
+                        <button class="btn btn-secondary" type="button" id="TOUT">
                                         TOUT
                                     </button>
-                        <button class="btn btn-secondary" type="button">
+                        <button class="btn btn-secondary" type="button" id="HTML">
                                         HTML
                                     </button>
-                        <button class="btn btn-secondary" type="button">
+                        <button class="btn btn-secondary" type="button" id="Boostrap">
                                         Bootstrap
                                     </button>
-                        <button class="btn btn-secondary" type="button">
+                        <button class="btn btn-secondary" type="button" id="Javascript">
                                         Javascript
                                     </button>
                     </div>
