Amélioration du Responsive Design !

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="card" id="JS">
             <h4 class="card-title">Converting jQuery to JavaScript</h4>
             <span class="badge badge-warning">Javascript</span>
-            <img class="card-img-top" src="http://canvimation.github.io/assets/logo.png" alt="Converting jQuery to JavaScript">
+            <img class="card-img-top" src="assets/pics/AUCUNE IMAGE DISPONIBLE.png" alt="Converting jQuery to JavaScript">
 
             <div class="card-body">
 
