Ajout de la description du site !

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all" />
     <title>Tricks and Tips</title>
+    <meta name="description" content="Répertoire de trucs et astuces à usage des devellopeurs web !" />
 </head>
 
 <body>
