--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all" />
     <title>Tricks and Tips</title>
+    <link rel="icon" type="image/ico" href="assets/pics/T_T.ico" />
     <meta name="description" content="Répertoire de trucs et astuces à usage des devellopeurs web !" />
 </head>
 
 <body>
     <header>
+        <a href="https://github.com/DzenetanMassart/Tricks-and-Tips" title="Vers le répertoire Github !"><img class="icone" src="assets/pics/T_T.svg" alt="Vers le répertoire Github !" /></a>
         <h1>Tricks and Tips</h1>
         <div>
             <div class="row">
@@ -274,8 +276,8 @@
         <div class="row-0">
             <div class="col-0-0">
                 <span class="tr_an_ti">Tricks and Tips</span> est un projet créé dans le cadre de
-                <a href="https://www.becode.org/" class="becode" alt="BeCode"><img src="https://cdn.uc.assets.prezly.com/0ce2e96c-4de7-4f10-ac0a-47e10150f06d/-/resize/1108x/-/quality/best/-/format/auto/" /></a> .
-                <p class="creators_conteneur">Créateurs: <a class="creators" href="https://github.com/DzenetanMassart">Massart D.</a></p>
+                <a href="https://www.becode.org/" title="Vers le site de BeCode" class="becode" alt="BeCode"><img alt="Logo BeCode" src="https://cdn.uc.assets.prezly.com/0ce2e96c-4de7-4f10-ac0a-47e10150f06d/-/resize/1108x/-/quality/best/-/format/auto/" /></a> .
+                <p class="creators_conteneur">Créateurs: <a class="creators" title="Vers le Github de Dzénetan Massart" href="https://github.com/DzenetanMassart">Massart D.</a></p>
 
                 <div class="copyrighter"><span>Massart.D ,2019</span></div>
             </div>
