--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
                                 <select class="form-control">
                                         <option id="Javascript">Javascript</option>
                                         <option id="Canvas">Canvas</option>
-                                        <option id="API">API</option>
+                                        <option id="REACT">REACT</option>
                                         </select>
                                     </button>
+                        <button class="btn btn-secondary" type="button">
+                                        <select class="form-control">
+                                                <option id="PHP">PHP</option>
+                                                <option id="WordPress">WordPress</option>
+                                                </select>
+                                            </button>
                     </div>
                 </div>
             </div>
