Rectification de la gestion des IDs

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                             Esthétique
                           </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">CSS</a>
-                            <a class="dropdown-item" href="#">Bootstrap</a>
-                            <a class="dropdown-item" href="#">WordPress</a>
+                            <a id="CSS" class="dropdown-item" href="#">CSS</a>
+                            <a id="Bootstrap" class="dropdown-item" href="#">Bootstrap</a>
+                            <a id="WordPress" class="dropdown-item" href="#">WordPress</a>
 
                         </div>
                     </li>
@@ -44,9 +44,9 @@
                               Programmation
                             </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Javascript</a>
-                            <a class="dropdown-item" href="#">React</a>
-                            <a class="dropdown-item" href="#">PHP</a>
+                            <a id="JS" class="dropdown-item" href="#">Javascript</a>
+                            <a id="React" class="dropdown-item" href="#">React</a>
+                            <a id="PHP" class="dropdown-item" href="#">PHP</a>
                         </div>
                     </li>
                 </ul>
@@ -282,7 +282,7 @@
 
     <footer>
         <nav class="navbar fixed-bottom navbar-light bg-light">
-            <a class="navbar-brand" href="#"> Tricks and Tips est un projet créé dans le cadre de
+            <a class="navbar-brand"> Tricks and Tips est un projet créé dans le cadre de
                 <img alt="Logo BeCode" src="https://cdn.uc.assets.prezly.com/0ce2e96c-4de7-4f10-ac0a-47e10150f06d/-/resize/1108x/-/quality/best/-/format/auto/" /> .
 </a>
             <p class="creators_conteneur">Créateurs: <a class="creators" title="Vers le Github de Dzénetan Massart" href="https://github.com/DzenetanMassart">Massart D.</a></p>
