--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="https://github.com/DzenetanMassart/Tricks-and-Tips">Tricks-and-Tips</a>
+            <a class="navbar-brand" href="https://github.com/DzenetanMassart/Tricks-and-Tips">Tricks and Tips</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -63,9 +63,8 @@
 
     <footer>
         <nav class="navbar fixed-bottom navbar-light bg-light">
-            <a class="navbar-brand"> Tricks and Tips est un projet créé dans le cadre de
-                <img alt="Logo BeCode" src="https://cdn.uc.assets.prezly.com/0ce2e96c-4de7-4f10-ac0a-47e10150f06d/-/resize/1108x/-/quality/best/-/format/auto/" /> .
-</a>
+            <a href="https://github.com/DzenetanMassart/Tricks-and-Tips" class="navbar-brand btn btn-light">Lien vers le répertoire Github</a>
+
             <p class="creators_conteneur">Créateurs: <a class="creators" title="Vers le Github de Dzénetan Massart" href="https://github.com/DzenetanMassart">Massart D.</a></p>
 
             <div class="copyrighter"><span>Massart.D ,2019</span></div>
