--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                         </div>
                     </li>
                 </ul>
+                <li class="nav-item my-2 my-lg-0 navbar-nav ">
+                    <a id="Gen" class="nav-link" href="#">Générateurs</a>
+                </li>
             </div>
         </nav>
     </header>
@@ -72,7 +75,6 @@
     </footer>
     <script src="assets/js/cartes.js"></script>
     <script src="assets/js/generateur.js"></script>
-
 </body>
 
 </html>
