--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all" />
     <title>Tricks and Tips</title>
-    <link rel="icon" type="image/ico" href="assets/pics/T_T.ico" />
+    <link rel="icon" type="image/png" href="assets/pics/T_T.png" />
     <meta name="description" content="Répertoire de trucs et astuces à usage des devellopeurs web !" />
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="https://github.com/DzenetanMassart/Tricks-and-Tips">Tricks and Tips</a>
+            <a class="navbar-brand" href="https://github.com/DzenetanMassart/Tricks-and-Tips"><img class="icone" src="assets/pics/T_T.png" />Tricks and Tips</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
