Suppression des ombrage et des animations ainsi qu'harmonisation des couleurs !

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </nav>
     </header>
 
-    <section>
+    <section id="scroll">
 
         <div class="row" id="generate">
 
@@ -73,6 +73,7 @@
             <div class="copyrighter"><span>Massart.D ,2019</span></div>
         </nav>
     </footer>
+    <script src="assets/js/scrolleffect.js"></script>
     <script src="assets/js/cartes.js"></script>
     <script src="assets/js/generateur.js"></script>
 </body>
