Ajout du bouton "autre"

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                             <a id="PHP" class="dropdown-item" href="#">PHP</a>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a id="Autre" class="nav-link" href="#">Autre</a>
+                    </li>
                 </ul>
                 <li class="nav-item my-2 my-lg-0 navbar-nav ">
                     <a id="Gen" class="nav-link" href="#">Générateurs</a>
