--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         <a id="Autre" class="nav-link" href="#">Autre</a>
                     </li>
                 </ul>
-                <li class="nav-item my-2 my-lg-0 navbar-nav ">
+                <li class="nav-item my-3 my-lg-0 navbar-nav ">
+
                     <a id="Gen" class="nav-link" href="#">Générateurs</a>
                 </li>
             </div>
@@ -71,13 +72,31 @@
         <nav class="navbar fixed-bottom navbar-light bg-light">
             <a href="https://github.com/DzenetanMassart/Tricks-and-Tips" class="navbar-brand btn btn-light">Lien vers le répertoire Github</a>
 
-            <p class="creators_conteneur">Créateurs: <a class="creators" title="Vers le Github de Dzénetan Massart" href="https://github.com/DzenetanMassart">Massart D.</a></p>
+            <!--Debut Rechercheurs-->
+            <div class="center">
+                <form class="form-inline my-3 my-lg-0">
+                    <select id="search_lang" class="custom-select mr-sm-3">
+                                <option selected>...</option>
+                                <option value="javascript">Javascript</option>
+                                <option value="php">PHP</option>
+                                <option value="css">CSS</option>
+                                <option value="html">HTML</option>
 
-            <div class="copyrighter"><span>Massart.D ,2019</span></div>
+                              </select>
+                    <input class="form-control mr-sm-3" id="search_input" type="search" placeholder="Que recherchons-nous ?" aria-label="Search">
+                    <button class="btn btn-outline-info my-2 my-sm-0" id="search_ok" type="submit">Rechercher</button>
+                </form>
+            </div>
+            <!--Fin Rechercheurs-->
+
+            <p class="nav-link active">Créateurs: <a title="Vers le Github de Dzénetan Massart" href="https://github.com/DzenetanMassart">Massart D.</a> </p>
+            <span class="copyrighter">Massart.D ,2019</span>
         </nav>
     </footer>
     <script src="assets/js/cartes.js"></script>
     <script src="assets/js/generateur.js"></script>
+    <script src="assets/js/search.js"></script>
+
 </body>
 
 </html>
