--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 
 <head>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
     <script src="assets/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all" />
@@ -15,10 +22,12 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="https://github.com/DzenetanMassart/Tricks-and-Tips"><img class="icone" src="assets/pics/T_T.png" />Tricks and Tips</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
+            <a class="navbar-brand" href="https://github.com/DzenetanMassart/Tricks-and-Tips"><img class="icone"
+                    src="assets/pics/T_T.png" />Tricks and Tips</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
@@ -29,9 +38,10 @@
                         <a id="HTML" class="nav-link" href="#">HTML</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Esthétique
-                          </a>
+                        </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a id="CSS" class="dropdown-item" href="#">CSS</a>
                             <a id="Bootstrap" class="dropdown-item" href="#">Bootstrap</a>
@@ -40,9 +50,10 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Programmation
-                            </a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Programmation
+                        </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a id="JS" class="dropdown-item" href="#">Javascript</a>
                             <a id="React" class="dropdown-item" href="#">React</a>
@@ -70,26 +81,29 @@
 
     <footer>
         <nav class="navbar fixed-bottom navbar-light bg-light">
-            <a href="https://github.com/DzenetanMassart/Tricks-and-Tips" class="navbar-brand btn btn-light">Lien vers le répertoire Github</a>
+            <a href="https://github.com/DzenetanMassart/Tricks-and-Tips" class="navbar-brand btn btn-light">Lien vers le
+                répertoire Github</a>
 
             <!--Debut Rechercheurs-->
             <div class="center">
                 <form class="form-inline my-3 my-lg-0">
                     <select id="search_lang" class="custom-select mr-sm-3">
-                                <option selected>...</option>
-                                <option value="javascript">Javascript</option>
-                                <option value="php">PHP</option>
-                                <option value="css">CSS</option>
-                                <option value="html">HTML</option>
+                        <option selected>...</option>
+                        <option value="javascript">Javascript</option>
+                        <option value="php">PHP</option>
+                        <option value="css">CSS</option>
+                        <option value="html">HTML</option>
 
-                              </select>
-                    <input class="form-control mr-sm-3" id="search_input" type="search" placeholder="Que recherchons-nous ?" aria-label="Search">
+                    </select>
+                    <input class="form-control mr-sm-3" id="search_input" type="search"
+                        placeholder="Que recherchons-nous ?" aria-label="Search">
                     <button class="btn btn-outline-info my-2 my-sm-0" id="search_ok" type="submit">Rechercher</button>
                 </form>
             </div>
             <!--Fin Rechercheurs-->
 
-            <p class="nav-link active">Créateurs: <a title="Vers le Github de Dzénetan Massart" href="https://github.com/DzenetanMassart">Massart D.</a> </p>
+            <p class="nav-link active">Créateurs: <a title="Vers le Github de Dzénetan Massart"
+                    href="https://github.com/DzenetanMassart">Massart D.</a> </p>
             <span class="copyrighter">Massart.D ,2019</span>
         </nav>
     </footer>
