Ajout des icones pour le PWA !

--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all" />
     <title>Tricks and Tips</title>
+    <!--Debut Gestion des icones de l'application-->
     <link rel="icon" type="image/png" href="assets/pics/T_T.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/pics/favicon_package_v0.16/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/pics/favicon_package_v0.16/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192"
+        href="assets/pics/favicon_package_v0.16/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/pics/favicon_package_v0.16/favicon-16x16.png">
+    <link rel="manifest" href="assets/pics/favicon_package_v0.16/site.webmanifest">
+    <link rel="mask-icon" href="assets/pics/favicon_package_v0.16/safari-pinned-tab.svg" color="#ff2800">
+    <meta name="apple-mobile-web-app-title" content="Tricks&amp;Tips">
+    <meta name="application-name" content="Tricks&amp;Tips">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="assets/pics/favicon_package_v0.16mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!--Fin Gestion des icones de l'application-->
+
     <meta name="description" content="Répertoire de trucs et astuces à usage des devellopeurs web !" />
 </head>
 
