--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta lang="fr">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,7 +39,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="https://github.com/DzenetanMassart/Tricks-and-Tips"><img class="icone"
-                    src="assets/pics/T_T.png" />Tricks and Tips</a>
+                    src="assets/pics/T_T.png" alt="Vers le répertoire de Tricks-and-Tips" />Tricks and Tips</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -102,7 +103,7 @@
             <!--Debut Rechercheurs-->
             <div class="center">
                 <form class="form-inline my-3 my-lg-0">
-                    <select id="search_lang" class="custom-select mr-sm-3">
+                    <select id="search_lang" class="custom-select mr-sm-3" label="search_lang">
                         <option selected>...</option>
                         <option value="javascript">Javascript</option>
                         <option value="php">PHP</option>
