--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/pics/favicon_package_v0.16/favicon-16x16.png">
     <link rel="manifest" href="assets/pics/favicon_package_v0.16/site.webmanifest">
     <link rel="mask-icon" href="assets/pics/favicon_package_v0.16/safari-pinned-tab.svg" color="#ff2800">
+    <link rel="apple-touch-startup-image" href="assets/pics/T_T.png" />
     <meta name="apple-mobile-web-app-title" content="Tricks&amp;Tips">
     <meta name="application-name" content="Tricks&amp;Tips">
     <meta name="msapplication-TileColor" content="#da532c">
