--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         crossorigin="anonymous"></script>
     <script src="assets/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
+    <meta name="full-screen" content="yes">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all" />
     <title>Tricks and Tips</title>
     <!--Debut Gestion des icones de l'application-->
@@ -23,7 +24,10 @@
     <link rel="icon" type="image/png" sizes="192x192"
         href="assets/pics/favicon_package_v0.16/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/pics/favicon_package_v0.16/favicon-16x16.png">
-    <link rel="manifest" href="assets/pics/favicon_package_v0.16/site.webmanifest">
+    <link rel="manifest" href="assets/pics/favicon_package_v0.16/site.webmanifest.json">
+    <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.9/pwacompat.min.js"
+        integrity="sha384-VcI6S+HIsE80FVM1jgbd6WDFhzKYA0PecD/LcIyMQpT4fMJdijBh0I7Iblaacawc"
+        crossorigin="anonymous"></script>
     <link rel="mask-icon" href="assets/pics/favicon_package_v0.16/safari-pinned-tab.svg" color="#ff2800">
     <link rel="apple-touch-startup-image" href="assets/pics/T_T.png" />
     <meta name="apple-mobile-web-app-title" content="Tricks&amp;Tips">
