Optimisation du splash screen.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/pics/favicon_package_v0.16/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192"
         href="assets/pics/favicon_package_v0.16/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/pics/T_T.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/pics/favicon_package_v0.16/favicon-16x16.png">
     <link rel="manifest" href="assets/pics/favicon_package_v0.16/site.webmanifest.json">
     <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.9/pwacompat.min.js"
