--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                                 <option value="php">PHP</option>
                                 <option value="css">CSS</option>
                                 <option value="html">HTML</option>
-
+                                <option value="wordpress">Extensions WordPress</option>
+                                
                             </select>
                             <input class="form-control mr-sm-3" id="search_input" type="search" placeholder="Que recherchons-nous ?" aria-label="Search">
                             <button class="btn btn-outline-info my-2 my-sm-0" id="search_ok" type="submit">Rechercher</button>
