--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="assets/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
     <meta name="full-screen" content="yes">
-    <link rel="preload" type="text/css" href="assets/css/style.css" media="all" as="style"/>
+    <link rel="stylesheet type="text/css" href="assets/css/style.css" media="all"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Tricks and Tips</title>
     <!--Debut Gestion des icones de l'application-->
