--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="assets/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.css" />
     <meta name="full-screen" content="yes">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" media="all" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Tricks and Tips</title>
     <!--Debut Gestion des icones de l'application-->
@@ -38,27 +38,27 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a title="Renitialiser l'affichage" class="navbar-brand" href="https://dzenetanmassart.github.io/Tricks-and-Tips/"><img class="icone" src="assets/pics/T_T.png" alt="Vers le répertoire de Tricks-and-Tips" />Tricks and Tips</a>
+            <a title="Renitialiser l'affichage" class="navbar-brand" id="brand" href="https://dzenetanmassart.github.io/Tricks-and-Tips/"><img class="icone" src="assets/pics/T_T.png" alt="Vers le répertoire de Tricks-and-Tips" />Tricks and Tips</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a id="TOUT" class="nav-link" href="#">Tout <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a id="TOUT" class="nav-link" href="#">Tout </a>
                     </li>
                     <li class="nav-item">
-                        <a id="HTML" class="nav-link" href="#" title="Afficher la documentation autour de HTML">HTML</a>
+                        <a id="HTML" class="nav-link" href="#HTML" title="Afficher la documentation autour de HTML">HTML</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Afficher les options esthétiques: CSS,Bootstrap et WordPress">
                             Esthétique
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a id="CSS" class="dropdown-item" href="#" title="Afficher la documentation autour du CSS">CSS</a>
-                            <a id="Bootstrap" class="dropdown-item" href="#" title="Afficher la documentation autour de Bootstrap">Bootstrap</a>
-                            <a id="WordPress" class="dropdown-item" href="#" title="Afficher la documentation autour de WordPress">WordPress</a>
+                            <a id="CSS" class="dropdown-item" href="#CSS" title="Afficher la documentation autour du CSS">CSS</a>
+                            <a id="Bootstrap" class="dropdown-item" href="#Bootstrap" title="Afficher la documentation autour de Bootstrap">Bootstrap</a>
+                            <a id="WordPress" class="dropdown-item" href="#WordPress" title="Afficher la documentation autour de WordPress">WordPress</a>
 
                         </div>
                     </li>
@@ -67,18 +67,18 @@
                             Programmation
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a id="JS" class="dropdown-item" href="#" title="Afficher la documentation autour de Javascript">Javascript</a>
-                            <a id="React" class="dropdown-item" href="#" title="Afficher la documentation autour de React">React</a>
-                            <a id="PHP" class="dropdown-item" href="#" title="Afficher la documentation autour du PHP">PHP</a>
+                            <a id="JS" class="dropdown-item" href="#Javascript" title="Afficher la documentation autour de Javascript">Javascript</a>
+                            <a id="React" class="dropdown-item" href="#React" title="Afficher la documentation autour de React">React</a>
+                            <a id="PHP" class="dropdown-item" href="#PHP" title="Afficher la documentation autour du PHP">PHP</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a id="Autre" class="nav-link" href="#" title="Afficher la documentation non-classable">Autre</a>
+                        <a id="Autre" class="nav-link" href="#AUTRE" title="Afficher la documentation non-classable">Autre</a>
                     </li>
                 </ul>
                 <li class="nav-item my-3 my-lg-0 navbar-nav ">
 
-                    <a id="Gen" class="nav-link" href="#" title="Afficher la documentation intéractive et/ou génératrice">Générateurs</a>
+                    <a id="Gen" class="nav-link" href="#GEN" title="Afficher la documentation intéractive et/ou génératrice">Générateurs</a>
                 </li>
             </div>
         </nav>
