--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a title="Renitialiser l'affichage" class="navbar-brand" id="brand" href="https://dzenetanmassart.github.io/Tricks-and-Tips/"><img class="icone" src="assets/pics/T_T.png" alt="Vers le répertoire de Tricks-and-Tips" />Tricks and Tips</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -92,7 +92,7 @@
     </section>
 
     <footer>
-        <nav class="navbar fixed-bottom navbar-light bg-light dropup">
+        <nav class="navbar fixed-bottom dropup navbar-dark bg-dark">
             <button class="footer-navbar" type="button" data-toggle="collapse" data-target="#footer-navbar" aria-controls="footer-navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="footer-navbar-icon"><i class="fas fa-search"></i></span>
             </button>
