--- a/index.html
+++ b/index.html
@@ -35,30 +35,29 @@
     <meta name="description" content="Répertoire de trucs et astuces à usage des devellopeurs web !" />
 </head>
 
-<body>
+<body style="overflow: auto;">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a title="Renitialiser l'affichage" class="navbar-brand" id="brand" href="https://dzenetanmassart.github.io/Tricks-and-Tips/"><img class="icone" src="assets/pics/T_T.png" alt="Vers le répertoire de Tricks-and-Tips" />Tricks and Tips</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a id="TOUT" class="nav-link" href="#">Tout </a>
+                        <a id="TOUT" class="nav-link" href="T_T.html# ">Tout </a>
                     </li>
                     <li class="nav-item">
-                        <a id="HTML" class="nav-link" href="#HTML" title="Afficher la documentation autour de HTML">HTML</a>
+                        <a id="HTML" class="nav-link" href="T_T.html#HTML" title="Afficher la documentation autour de HTML">HTML</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Afficher les options esthétiques: CSS,Bootstrap et WordPress">
                             Esthétique
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a id="CSS" class="dropdown-item" href="#CSS" title="Afficher la documentation autour du CSS">CSS</a>
-                            <a id="Bootstrap" class="dropdown-item" href="#Bootstrap" title="Afficher la documentation autour de Bootstrap">Bootstrap</a>
-                            <a id="WordPress" class="dropdown-item" href="#WordPress" title="Afficher la documentation autour de WordPress">WordPress</a>
+                            <a id="CSS" class="dropdown-item" href="T_T.html#CSS" title="Afficher la documentation autour du CSS">CSS</a>
+                            <a id="Bootstrap" class="dropdown-item" href="T_T.html#Bootstrap" title="Afficher la documentation autour de Bootstrap">Bootstrap</a>
+                            <a id="WordPress" class="dropdown-item" href="T_T.html#WordPress" title="Afficher la documentation autour de WordPress">WordPress</a>
 
                         </div>
                     </li>
@@ -67,41 +66,22 @@
                             Programmation
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a id="JS" class="dropdown-item" href="#Javascript" title="Afficher la documentation autour de Javascript">Javascript</a>
-                            <a id="React" class="dropdown-item" href="#React" title="Afficher la documentation autour de React">React</a>
-                            <a id="PHP" class="dropdown-item" href="#PHP" title="Afficher la documentation autour du PHP">PHP</a>
+                            <a id="JS" class="dropdown-item" href="T_T.html#Javascript" title="Afficher la documentation autour de Javascript">Javascript</a>
+                            <a id="React" class="dropdown-item" href="T_T.html#React" title="Afficher la documentation autour de React">React</a>
+                            <a id="PHP" class="dropdown-item" href="T_T.html#PHP" title="Afficher la documentation autour du PHP">PHP</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a id="Autre" class="nav-link" href="#AUTRE" title="Afficher la documentation non-classable">Autre</a>
+                        <a id="Gen" class="nav-link" href="T_T.html#GEN" title="Afficher la documentation intéractive et/ou génératrice">Générateurs & Documents</a>
+
                     </li>
                 </ul>
-                <li class="nav-item my-3 my-lg-0 navbar-nav ">
+                <div class="dropdown-divider"></div>
 
-                    <a id="Gen" class="nav-link" href="#GEN" title="Afficher la documentation intéractive et/ou génératrice">Générateurs</a>
-                </li>
             </div>
-        </nav>
-    </header>
-
-    <section id="scroll">
-
-        <div class="row" id="generate">
-
-        </div>
-    </section>
-
-    <footer>
-        <nav class="navbar fixed-bottom dropup navbar-dark bg-dark">
-            <button class="footer-navbar" type="button" data-toggle="collapse" data-target="#footer-navbar" aria-controls="footer-navbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="footer-navbar-icon"><i class="fas fa-search"></i></span>
-            </button>
-            <div class="collapse navbar-collapse" id="footer-navbar">
-                <div class="avbar-nav mr-auto">
-                    <!--Debut Rechercheurs-->
-                    <div class="searcher">
-                        <form class="form-inline my-3 my-lg-0">
-                            <select id="search_lang" class="custom-select mr-sm-3" label="search_lang">
+            <div class="searcher">
+                <form class="form-inline my-lg-0 bg-dark">
+                    <select id="search_lang" class="custom-select-lg mr-lg-3 bg-dark text-white" label="search_lang">
                                 <option selected>...</option>
                                 <option value="javascript">Javascript</option>
                                 <option value="php">PHP</option>
@@ -110,19 +90,112 @@
                                 <option value="wordpress">Extensions WordPress</option>
                                 
                             </select>
-                            <input class="form-control mr-sm-3" id="search_input" type="search" placeholder="Que recherchons-nous ?" aria-label="Search">
-                            <button class="btn btn-outline-info my-2 my-sm-0" id="search_ok" type="submit">Rechercher</button>
-                        </form>
-                    </div>
-                    <!--Fin Rechercheurs-->
-                </div>
+                    <input class="form-control-lg p-3  bg-dark text-white" id="search_input" type="search" placeholder="Mot-Clé" aria-label="Search">
+                    <button class="btn btn-dark my-lg-0" id="search_ok" type="submit">Rechercher</button>
+                </form>
             </div>
         </nav>
+    </header>
+
+
+    <main>
+
+        <h1>Tricks and Tips</h1>
+        <section class="presentation">
+            <h2>Présentation</h2>
+            <p>Créé par <a href="https://dzenetanmassart.github.io/" target="_blank">Dzénetan Massart<sup><i class="fas fa-external-link-alt"></i></sup></a> le 17 Février 2019 à <a href="https://becode.org/fr/" target="_blank">la formation BeCode<sup><i class="fas fa-external-link-alt"></i></sup></a>.
+                <b>Tricks & Tips</b> sert à répertorier les applications et documentations autour du développement web.</p>
+        </section>
+        <section class="presentation">
+            <h2>Fonctionnement</h2>
+            <p>
+                La barre de navigation se trouvant au-dessus de la page sert à charger les différentes cartes de la base de donnée selon les filtres indiqués.
+            </p>
+            <p>
+                Chaque carte mentionne :
+                <div class="separation">
+                    <ul>
+                        <li>Le titre de l'application/documentation</li>
+                        <li>La description de l'application/documentation</li>
+                    </ul>
+                    <ul>
+                        <li>Le badge spécifiant la technologie mise en avant pas l'application/documentation</li>
+                        <li>Le logo de l'application/documentation</li>
+                        <li>Si l'application est un générateur</li>
+                    </ul>
+                </div>
+            </p>
+        </section>
+        <section class="presentation">
+            <h2>Selection du jour</h2>
+            <p> Aujourd'hui, ces 3 cartes ont été piochées dans la base de donnée.</p>
+            <div class="index_selection" id="generate"></div>
+        </section>
+
+    </main>
+    <footer>
+
     </footer>
     <script src="assets/js/cartes.js"></script>
-    <script src="assets/js/generateur.js"></script>
+
+    <script>
+        let generate = " ";
+        let tab_select = [5, 10, 12];
+        for (let ii = 0; ii < tritip.length; ii++) {
+
+            let tt = (tritip[ii]);
+            if (tab_select[0] === ii ||
+                tab_select[1] === ii ||
+                tab_select[2] === ii) {
+                generate += '<a href="' + tt.link + '" target="_blank" ><div class="row ensemble"><div class="col-12"><div class="row"><div class="col-8 part_un"> <h3 class="text-center">' +
+                    tt.title + '</h3> <p>' + tt.desc + '</p></div><div class="col-md-4 part_deux ' + tt.badge + '">';
+                generate += '<h4 class="badge ';
+
+                if (tt.badge === "Javascript") {
+                    generate += ' Javascript';
+                } else if (tt.badge === "CSS") {
+                    generate += ' CSS';
+                } else if (tt.badge === "HTML") {
+                    generate += ' HTML';
+                } else if (tt.badge === "Bootstrap") {
+                    generate += ' Bootstrap';
+                } else if (tt.badge === "WordPress") {
+                    generate += ' WordPress';
+                } else if (tt.badge === "React") {
+                    generate += ' React';
+                } else if (tt.badge === "PHP") {
+                    generate += ' PHP';
+                } else {
+                    generate += '';
+                }
+
+                generate += '">' +
+                    tt.badge +
+                    '</h4>';
+                if (tt.generateur === 1) {
+                    generate += '<span class="generateur">Generateur</span>';
+                }
+                if (tt.img_link != "nope") {
+                    generate += '<img src="' +
+                        tt.img_link +
+                        '" title="' +
+                        tt.title +
+                        '" alt="' +
+                        tt.title +
+                        '" >';
+                } else {}
+
+                generate += '</div></div></div></div></a>';
+            }
+        }
+
+
+
+        document.getElementById("generate").innerHTML = generate;
+    </script>
+
+
+
     <script src="assets/js/search.js"></script>
 
 </body>
-
-</html>
