Optimisation de la navbar

--- a/T_T.html
+++ b/T_T.html
@@ -80,9 +80,9 @@
                 <div class="dropdown-divider"></div>
 
             </div>
-            <div class="searcher">
-                <form class="form-inline my-xl-0 bg-dark">
-                    <select id="search_lang" class="custom-select-lg mr-lg-3 bg-dark text-white" label="search_lang">
+            <form class="searcher form-inline">
+                <form class=" input-group bg-dark">
+                    <select id="search_lang" class="custom-select-lg mr-sm-2 bg-dark text-white" label="search_lang">
                                 <option selected>...</option>
                                 <option value="javascript">Javascript</option>
                                 <option value="php">PHP</option>
@@ -91,10 +91,10 @@
                                 <option value="wordpress">Extensions WordPress</option>
                                 
                             </select>
-                    <input class="form-control-lg p-3  mr-lg-3  bg-dark text-white" id="search_input" type="search" placeholder="Mot-Clé" aria-label="Search">
-                    <button class="btn btn-dark mr-lg-3  p-3 my-lg-0 btn-outline-light" id="search_ok" type="submit"><i class="fas fa-search"></i> Rechercher</button>
+                    <input class="form-control-lg mr-sm-2 bg-dark text-white" id="search_input" type="search" placeholder="Mot-Clé" aria-label="Search">
+                    <button class="btn btn-dark" id="search_ok" type="submit"><i class="fas fa-search"></i></button>
                 </form>
-            </div>
+            </form>
         </nav>
     </header>
     <main class="scrollbar">
@@ -106,7 +106,9 @@
     </main>
 
     <footer>
-
+        <p>Créé par <a href="https://dzenetanmassart.github.io/" target="_blank">Dzénetan Massart<sup><i class="fas fa-external-link-alt"></i></sup></a> le 17 Février 2019 à <a href="https://becode.org/fr/" target="_blank">la formation BeCode<sup><i class="fas fa-external-link-alt"></i></sup></a>.
+            <b>Tricks & Tips</b> sert à répertorier les applications et documentations autour du développement web.</p>
+        <p>Massart Dzénetan©2019-2021</p>
     </footer>
     <script src="assets/js/cartes.js"></script>
     <script src="assets/js/generateur.js"></script>
