--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 <div class="dropdown-divider"></div>
 
             </div>
-            <div class="searcher">
-                <form class="form-inline my-lg-0 bg-dark">
-                    <select id="search_lang" class="custom-select-lg mr-lg-3 bg-dark text-white" label="search_lang">
+            <form class="searcher form-inline">
+                <form class=" input-group bg-dark">
+                    <select id="search_lang" class="custom-select-lg mr-sm-2 bg-dark text-white" label="search_lang">
                                 <option selected>...</option>
                                 <option value="javascript">Javascript</option>
                                 <option value="php">PHP</option>
@@ -90,10 +90,10 @@
                                 <option value="wordpress">Extensions WordPress</option>
                                 
                             </select>
-                    <input class="form-control-lg p-3  bg-dark text-white" id="search_input" type="search" placeholder="Mot-Clé" aria-label="Search">
-                    <button class="btn btn-dark my-lg-0" id="search_ok" type="submit">Rechercher</button>
+                    <input class="form-control-lg mr-sm-2 bg-dark text-white" id="search_input" type="search" placeholder="Mot-Clé" aria-label="Search">
+                    <button class="btn btn-dark" id="search_ok" type="submit"><i class="fas fa-search"></i></button>
                 </form>
-            </div>
+            </form>
         </nav>
     </header>
 
@@ -115,12 +115,12 @@
                 Chaque carte mentionne :
                 <div class="separation">
                     <ul>
-                        <li>Le titre de l'application/documentation</li>
-                        <li>La description de l'application/documentation</li>
+                        <li>Le titre de l'application / documentation</li>
+                        <li>La description de l'application / documentation</li>
                     </ul>
                     <ul>
-                        <li>Le badge spécifiant la technologie mise en avant pas l'application/documentation</li>
-                        <li>Le logo de l'application/documentation</li>
+                        <li>Le badge spécifiant la technologie mise en avant pas l'application / documentation</li>
+                        <li>Le logo de l'application / documentation</li>
                         <li>Si l'application est un générateur</li>
                     </ul>
                 </div>
