--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                                 <option value="css">CSS</option>
                                 <option value="html">HTML</option>
                                 <option value="wordpress">Extensions WordPress</option>
+                                <option value="openclassroom">OpenClassroom</option>
                                 
                             </select>
                     <input class="form-control-lg mr-sm-2 bg-dark text-white" id="search_input" type="search" placeholder="Mot-Clé" aria-label="Search">
