--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
     <link rel="apple-touch-startup-image" href="assets/pics/T_T.png" />
     <meta name="apple-mobile-web-app-title" content="Tricks&amp;Tips">
     <meta name="application-name" content="Tricks&amp;Tips">
-    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileColor" content="#1b1b1b">
     <meta name="msapplication-TileImage" content="assets/pics/favicon_package_v0.16mstile-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#1b1b1b">
     <!--Fin Gestion des icones de l'application-->
+
+    <!--Début gestion de l'embed pour Discord-->
+    <meta content="Tricks and Tips" property="og:title" />
+    <meta content="Répertoire de trucs et astuces à usage des devellopeurs web !" property="og:description" />
+    <meta content="https://dzenetanmassart.github.io/Tricks-and-Tips/" property="og:url" />
+    <meta content="assets/pics/favicon_package_v0.16/android-chrome-192x192.png" property="og:image" />
+    <meta content="#1b1b1b" data-react-helmet="true" name="theme-color" />
+    <!--Fin  gestion de l'embed pour Discord-->
 
     <meta name="description" content="Répertoire de trucs et astuces à usage des devellopeurs web !" />
 </head>
