--- a/index.html
+++ b/index.html
@@ -148,14 +148,16 @@
     <script src="assets/js/cartes.js"></script>
 
     <script>
+        const d = new Date();
+a = d.getDate();
         let generate = " ";
-        let tab_select = [5, 10, 12];
+        let tab_select = [1, 3, 10];
         for (let ii = 0; ii < tritip.length; ii++) {
 
             let tt = (tritip[ii]);
-            if (tab_select[0] === ii ||
-                tab_select[1] === ii ||
-                tab_select[2] === ii) {
+            if (tab_select[0]+a === ii ||
+                tab_select[1]+a === ii ||
+                tab_select[2]+a === ii) {
                 generate += '<a href="' + tt.link + '" target="_blank" ><div class="row ensemble"><div class="col-12"><div class="row"><div class="col-8 part_un"> <h3 class="text-center">' +
                     tt.title + '</h3> <p>' + tt.desc + '</p></div><div class="col-md-4 part_deux ' + tt.badge + '">';
                 generate += '<h4 class="badge ';
